fix: elements alignment
* fix: toolbar title alignmet

* fix: midnight and noon representation

* refactor: centrify list headers

* refactor: replace toggle fab with toolbar button

* fix: trancate toolbar title

* fix: list item height

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,20 @@
+.force-center,
+.toolbar__center {
+    text-align: center !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+}
+
+.toolbar__left,
+.toolbar__right {
+    width: 27% !important;
+}
+
+.list-item {
+    height: 60px !important;
+}
+
 .route_thumbnail {
     width: 38px;
     height: 38px;
@@ -14,6 +31,5 @@
 }
 
 .bottom-box {
-    text-align: center;
     font-size: 0.8em;
 }
